Some Changes on the Desgine

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --mainLinkColor-dark: rgb(30, 190, 214);
     --mainBorderColor-dark: #2b3031;
     --mainBgColor-dark: #131415;
+    --gradiant: linear-gradient(to right, #00c6ff, #0072ff);
     --mainTextColor: var(--mainTextColor-dark);
     --secondaryTextColor: var(--secondaryTextColor-dark);
     --mainLinkColor: var(--mainLinkColor-dark);
@@ -71,7 +72,19 @@ li {
 
 .section--page {
     padding-top: 1em;
-    padding-bottom: 1em
+    padding-bottom: 1em;
+}
+
+.section-info {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border: 2px solid #2c2c2b70;
+    border-radius: 20px;
+    transition: all 0.3s ease-in-out
+}
+.section-info:hover {
+    border: 2px solid #2c2c2bbb;
+    border-radius: 20px;
 }
 
 #wrapper--hero {
@@ -88,11 +101,32 @@ a {
     font-size: 32px
 }
 
+.hidden {
+    opacity:0;
+  }
+  .username-container {
+    font-size: 32px;
+    display:block;
+    color:white;
+  }
+  .underscore {
+    display:inline-block;
+    top:-0.14em;
+    left:10px;
+  }
+
+  #profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px; /* Abstand zwischen Profil und Social-Liste */
+}
+
 #profile-pic {
     width: 150px;
     height: 150px;
     object-fit: cover;
-    border-radius: 50%
+    border-radius: 50%;
 }
 
 #email {
@@ -103,7 +137,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     column-gap: 5px;
-    flex-wrap: wrap
+    flex-wrap: wrap;
 }
 
 #skills--list {
@@ -119,16 +153,23 @@ a {
 
 .card--techstack {
     border: 1px solid var(--mainBorderColor);
-    border-radius: 5px;
+    border-radius: 15px;
     padding: .5em 1em;
-    align-items: center
+    align-items: center;
+    transition: all 0.3s ease-in-out
 }
-
+.card--techstack:hover {
+    border: 1px solid #0072ff;
+    border-radius: 15px;
+    padding: .5em 1em;
+    align-items: center;
+    user-select: none;
+}
 .card--work-history {
     border-left: 1px solid var(--mainBorderColor);
     margin-top: 3em;
     margin-bottom: 3em;
-    padding-left: 2em
+    padding-left: 2em;
 }
 
 .line-break {
@@ -221,60 +262,6 @@ a {
     background-color: #555
 }
 
-#go-top-btn {
-    position: fixed;
-    bottom: -50px;
-    right: 20px;
-    width: 50px;
-    height: 50px;
-    background-color: #2b3031;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
-    transition: bottom 0.3s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center
-}
-
-#go-top-btn:hover {
-    background-color: #555
-}
-
-#go-top-btn img {
-    width: 25px;
-    height: 25px;
-    fill: #fff
-}
-
-#goBottom {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 50px;
-    height: 50px;
-    background-color: #2b3031;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
-    transition: bottom 0.3s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center
-}
-
-#goBottom:hover {
-    background-color: #555
-}
-
-#goBottom img {
-    width: 25px;
-    height: 25px;
-    fill: #fff
-}
-
 #socials--list {
     padding: 10px;
 }
@@ -284,3 +271,4 @@ a {
     height: 25px;
     fill: #fff
 }
+
