--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
 }
 
   .container {
@@ -71,8 +70,19 @@ li {
 }
 
 .section--page {
-    padding-top: 1em;
-    padding-bottom: 1em;
+    position: relative; /* Damit die Positionierung des Textes relativ zum Container ist */
+}
+
+.section--page::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    background-color: rgba(17, 17, 17, 0.5);
+    z-index: -1; /* Damit der geblurte Hintergrund hinter dem Text liegt */
 }
 
 .section-info {
@@ -80,8 +90,12 @@ li {
     padding-bottom: 1em;
     border: 2px solid #2c2c2b70;
     border-radius: 20px;
-    transition: all 0.3s ease-in-out
+    transition: all 0.3s ease-in-out;
+    background-color: rgba(17, 17, 17, 0.5);
+    position: relative; 
 }
+
+
 .section-info:hover {
     border: 2px solid #2c2c2bbb;
     border-radius: 20px;
@@ -270,4 +284,37 @@ a {
     width: 25px;
     height: 25px;
     fill: #fff
+}
+#blur-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.705); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; 
+}
+
+#blur-text {
+    color: white;
+    font-size: 24px;
+}
+#video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the video covers the entire viewport */
+    z-index: -1;
+}
+#video-content {
+    position: relative;
+    z-index: 1000;
+    color: white;
+    text-align: center;
+    padding: 20px;
 }
