--- a/style.css
+++ b/style.css
@@ -22,10 +22,13 @@
 }
 
 body {
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100vh; 
+    flex-direction: column;
+    margin: 0;
 }
 
   .container {
@@ -62,12 +65,28 @@ a {
 li {
     line-height: 1.9em
 }
+main {
+    flex: 1; 
+}
 
+footer {
+    background-color: transparent; 
+    backdrop-filter: blur(3px); 
+    color: #ffffff; 
+    padding: 10px 0; 
+    text-align: center; 
+    border-radius: 50px;
+    bottom: 0;
+    width: 50%;
+    text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    animation: glow 7s linear infinite alternate; /* Fade-In-Fade-Out-Glüheffekt */
+}
 .hidden {
     display: none;
 }
 
 #container--main {
+    backdrop-filter: blur(1px);
     opacity: 0;
     transform: translateY(-50px);
     transition: opacity 1s ease, transform 1s ease;
@@ -86,9 +105,9 @@ li {
     top: 0;
     left: 0;
     width: 100%;
-    height: 109%;
+    height: 100%;
     border-radius: 20px;
-    background-color: rgba(17, 17, 17, 0.5);
+   background-color: rgba(17, 17, 17, 0.5); 
     z-index: -1; 
 }
 
@@ -169,8 +188,11 @@ a {
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
-    font-size: .9em
+    justify-content: center; /* Zentriert horizontal */
+    align-items: center; /* Zentriert vertikal */
+    font-size: .9em;
 }
+
 
 .card--techstack {
     border: 1px solid var(--mainBorderColor);
@@ -195,6 +217,10 @@ a {
 
 .line-break {
     background-color: var(--mainBorderColor);
+    top: 1px;
+    height: 1px
+}
+.line-break--nocolor {
     top: 1px;
     height: 1px
 }
@@ -304,15 +330,27 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 9999; 
+    z-index: 9998; 
 }
 
 #blur-text {
-    filter: blur(5px); 
     color: white;
     font-size: 24px;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.5); 
+    text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    z-index: 99999;
+    animation: glow 5s linear infinite alternate; /* Fade-In-Fade-Out-Glüheffekt */
+}
+
+@keyframes glow {
+    5% {
+        text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    }
+    50% {
+        text-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
+    }
+    80% {
+        text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    }
 }
 #video-background {
     position: fixed;
@@ -330,3 +368,4 @@ a {
     text-align: center;
     padding: 20px;
 }
+
