--- a/links/style.css
+++ b/links/style.css
@@ -81,8 +81,8 @@ a {
     height: 40px;
     border-radius: 20px;
     background-color: rgb(52,52,52);
-    z-index: 10; /* Sicherstellen, dass es über dem Link liegt */
-    cursor: pointer; /* Zeigt, dass es anklickbar ist */
+    z-index: 10; 
+    cursor: pointer; 
     position: relative; 
 }
 
