--- a/links/style.css
+++ b/links/style.css
@@ -29,6 +29,19 @@ a {
     color: rgb(240,240,240);
 }
 
+footer {
+    background-color: transparent; 
+    backdrop-filter: blur(3px); 
+    color: #ffffff; 
+    padding: 10px 0; 
+    text-align: center; 
+    border-radius: 50px;
+    bottom: 0;
+    width: 50%;
+    text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    animation: glow 7s linear infinite alternate; 
+}
+
 .container {
     width: 91%;
     max-width: 680px;
@@ -80,9 +93,9 @@ a {
 
 
 .image-container {
-    height: 96px;
-    width: 96px;
-    border-radius: 48px;
+    height: 150px;
+    width: 150px;
+    border-radius: 80px;
     overflow: hidden;
 }
 
@@ -95,4 +108,15 @@ a {
     display: flex;
     justify-content: center; 
     align-items: center; 
+}
+@keyframes glow {
+    5% {
+        text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    }
+    50% {
+        text-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+    }
+    80% {
+        text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    }
 }
