--- a/about/style.css
+++ b/about/style.css
@@ -79,7 +79,7 @@ footer {
     bottom: 0;
     width: 50%;
     text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
-    animation: glow 7s linear infinite alternate; /* Fade-In-Fade-Out-Glüheffekt */
+    animation: glow 7s linear infinite alternate; 
 }
 .hidden {
     display: none;
@@ -188,8 +188,8 @@ a {
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
-    justify-content: center; /* Zentriert horizontal */
-    align-items: center; /* Zentriert vertikal */
+    justify-content: center; 
+    align-items: center;
     font-size: .9em;
 }
 
@@ -338,7 +338,7 @@ a {
     font-size: 24px;
     text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
     z-index: 99999;
-    animation: glow 5s linear infinite alternate; /* Fade-In-Fade-Out-Glüheffekt */
+    animation: glow 5s linear infinite alternate; 
 }
 
 @keyframes glow {
