--- a/about/style.css
+++ b/about/style.css
@@ -155,20 +155,6 @@ a {
     left:10px;
   }
 
-  #profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px; 
-}
-
-#profile-pic {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
 #email {
     color: var(--mainTextColor)
 }
@@ -178,6 +164,11 @@ a {
     justify-content: space-evenly;
     column-gap: 5px;
     flex-wrap: wrap;
+}
+
+.kofi-widget-container {
+    display: flex; 
+    justify-content: center; 
 }
 
 #skills--list {
@@ -369,3 +360,148 @@ a {
     padding: 20px;
 }
 
+
+#profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    position: relative;
+    padding: 20px;
+}
+
+#profile-indicator-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+#status-indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+#profile-picture {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+#profile-pic {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.glow-effect {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% { box-shadow: 0 0 10px rgba(255, 255, 255, 0); }
+    50% { box-shadow: 0 0 20px rgba(255, 255, 255, 0); }
+    100% { box-shadow: 0 0 10px rgba(255, 255, 255, 0); }
+}
+
+/* Status Glow-Animationen */
+.status-online.glow-effect {
+    animation: pulse-green 2s infinite;
+}
+.status-dnd.glow-effect {
+    animation: pulse-red 2s infinite;
+}
+.status-idle.glow-effect {
+    animation: pulse-yellow 2s infinite;
+}
+
+.status-offline {
+    background-color: rgb(43, 43, 43);
+}
+
+@keyframes pulse-green {
+    0% { box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); }
+    50% { box-shadow: 0 0 20px rgba(0, 255, 0, 1); }
+    100% { box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); }
+}
+@keyframes pulse-red {
+    0% { box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); }
+    50% { box-shadow: 0 0 20px rgba(255, 0, 0, 1); }
+    100% { box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); }
+}
+@keyframes pulse-yellow {
+    0% { box-shadow: 0 0 10px rgba(255, 165, 0, 0.5); } 
+    50% { box-shadow: 0 0 20px rgba(255, 165, 0, 1); } 
+    100% { box-shadow: 0 0 10px rgba(255, 165, 0, 0.5); } 
+}
+
+.profile-indicator-container {
+    position: relative; 
+}
+
+.status-icon {
+    position: absolute;
+    bottom: 30px; 
+    right: -12px;  
+    font-size: 24px;
+    cursor: pointer;
+    display: none; 
+}
+
+.music-icon {
+    position: absolute;
+    bottom: 5px; 
+    right: 5px; 
+    font-size: 24px;
+    cursor: pointer;
+    display: none; 
+}
+
+.rotating {
+    animation: spin 2s linear infinite;
+}
+
+.song-popup {
+    position: absolute;
+    bottom: -20px; 
+    margin-left: 120px; 
+    padding: 6px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 5px;
+    font-size: 12px;
+    display: none; 
+    white-space: nowrap; 
+    z-index: 1;
+    opacity: 0; 
+    transition: opacity 0.5s ease; 
+}
+
+.status-popup {
+    position: absolute; 
+    bottom: 11px; 
+    margin-left: 145px; 
+    padding: 5px; 
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff; 
+    border-radius: 5px;
+    font-size: 12px; 
+    display: none; 
+    white-space: nowrap; 
+    z-index: 1;
+    opacity: 0; 
+    transition: opacity 0.5s ease; 
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
