--- a/about/style.css
+++ b/about/style.css
@@ -408,7 +408,6 @@ a {
     100% { box-shadow: 0 0 10px rgba(255, 255, 255, 0); }
 }
 
-/* Status Glow-Animationen */
 .status-online.glow-effect {
     animation: pulse-green 2s infinite;
 }
@@ -443,6 +442,14 @@ a {
     position: relative; 
 }
 
+.activity-icon {
+    position: absolute;
+    bottom: 60px; 
+    right: -20px;   
+    font-size: 24px;
+    cursor: pointer;
+    display: none; 
+}
 .status-icon {
     position: absolute;
     bottom: 30px; 
@@ -465,11 +472,27 @@ a {
     animation: spin 2s linear infinite;
 }
 
+.activity-popup {
+    position: absolute; 
+    bottom: 65px; 
+    margin-left: 166px; 
+    padding: 2px; 
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff; 
+    border-radius: 5px;
+    font-size: 12px; 
+    display: block; 
+    white-space: nowrap; 
+    z-index: 1;
+    opacity: 0; 
+    transition: opacity 0.5s ease; 
+}
+
 .song-popup {
     position: absolute;
-    bottom: -20px; 
-    margin-left: 120px; 
-    padding: 6px;
+    bottom: 5px; 
+    margin-left: 142px; 
+    padding: 4px;
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     border-radius: 5px;
@@ -483,9 +506,9 @@ a {
 
 .status-popup {
     position: absolute; 
-    bottom: 11px; 
-    margin-left: 145px; 
-    padding: 5px; 
+    bottom: 35px; 
+    margin-left: 160px; 
+    padding: 4px; 
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff; 
     border-radius: 5px;
@@ -504,4 +527,31 @@ a {
     100% {
         transform: rotate(360deg);
     }
+}
+.mute-container {
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.1); 
+    border: 1px solid #000; 
+    border-radius: 15px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center; 
+    height: 50px;
+    padding: 10px; 
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    width: 50px; 
+    z-index: 1;
+    transition: background-color 0.3s; 
+}
+
+.mute-container:hover {
+    background-color: rgba(255, 255, 255, 0.2); 
+}
+
+.icon {
+    color: white; 
+    font-size: 24px; 
+    transition: color 0.3s;
 }
