--- a/about/style.css
+++ b/about/style.css
@@ -528,6 +528,7 @@ a {
         transform: rotate(360deg);
     }
 }
+/* Mute */
 .mute-container {
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1); 
@@ -545,7 +546,6 @@ a {
     z-index: 1;
     transition: background-color 0.3s; 
 }
-
 .mute-container:hover {
     background-color: rgba(255, 255, 255, 0.2); 
 }
