--- a/about/style.css
+++ b/about/style.css
@@ -155,6 +155,13 @@ a {
     left:10px;
   }
 
+  @media (max-width: 600px) {
+    .username-container {
+        text-align: center; /* Center text */
+        font-size: 24px; /* Smaller font size for mobile */
+    }
+}
+
 #email {
     color: var(--mainTextColor)
 }
@@ -555,3 +562,4 @@ a {
     font-size: 24px; 
     transition: color 0.3s;
 }
+
