--- a/about/style.css
+++ b/about/style.css
@@ -49,12 +49,13 @@ body {
     background: linear-gradient(to right, #00c6ff, #0072ff);
     border-radius: 0.50em;
   }
-p,
-span,
-li {
-    color: var(--secondaryTextColor);
-    font-size: 1em
-}
+  p,
+  span,
+  li {
+      color: var(--secondaryTextColor);
+      font-size: 1em;
+      line-height: 1.4em; 
+  }
 
 a {
     text-decoration: none;
@@ -70,6 +71,7 @@ main {
 }
 
 footer {
+    position: relative;
     background-color: transparent; 
     backdrop-filter: blur(3px); 
     color: #ffffff; 
@@ -79,8 +81,26 @@ footer {
     bottom: 0;
     width: 50%;
     text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
-    animation: glow 7s linear infinite alternate; 
+    animation: glow 7s infinite alternate; 
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
+.song-link {
+    color: white;         
+    text-decoration: underline; 
+}
+.song-link:hover {
+    color: #ccc; 
+}
+
+h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding-top: 5px;
+    margin-bottom: 10px; 
+}
+
+
 .hidden {
     display: none;
 }
@@ -96,16 +116,16 @@ footer {
 }
 
 .section--page {
-    position: relative; 
+    position: relative;
+    margin-bottom: 35px; 
 }
 
 .section--page::before {
     content: "";
     position: absolute;
-    top: 0;
     left: 0;
     width: 100%;
-    height: 105%;
+    height: 110%;
     border-radius: 20px;
    background-color: rgba(17, 17, 17, 0.5); 
     z-index: -1; 
@@ -121,6 +141,13 @@ footer {
     position: relative; 
 }
 
+.projects-section {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border: 1px solid #2c2c2b70; 
+    border-radius: 10px;
+}
 
 .section-info:hover {
     border: 2px solid #2c2c2bbb;
@@ -132,6 +159,7 @@ footer {
     align-items: center;
     gap: 4em;
 }
+
 #bio,
 a {
     font-weight: 300
@@ -157,8 +185,8 @@ a {
 
   @media (max-width: 600px) {
     .username-container {
-        text-align: center; /* Center text */
-        font-size: 24px; /* Smaller font size for mobile */
+        text-align: center; 
+        font-size: 24px; 
     }
 }
 
@@ -336,18 +364,24 @@ a {
     font-size: 24px;
     text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
     z-index: 99999;
-    animation: glow 5s linear infinite alternate; 
+    animation: glow 7s infinite alternate; 
 }
 
 @keyframes glow {
-    5% {
-        text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    0% {
+        text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+    }
+    25% {
+        text-shadow: 0 0 7px rgba(255, 255, 255, 0.7);
     }
     50% {
-        text-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
+        text-shadow: 0 0 12px rgba(255, 255, 255, 1);
     }
-    80% {
-        text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+    75% {
+        text-shadow: 0 0 7px rgba(255, 255, 255, 0.7);
+    }
+    100% {
+        text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
     }
 }
 #video-background {
