--- a/links/style.css
+++ b/links/style.css
@@ -58,6 +58,7 @@ footer {
     align-items: center;
     flex-wrap: wrap;
     gap: 5px;
+    max-width: 900px; 
 }
 
 .title {
@@ -68,11 +69,13 @@ footer {
     border-radius: 17px;
     display: flex;
     justify-content: space-between;
+    transition: ease-in 0.2s;
 }
 
 .title:hover {
     transition: cubic-bezier(.07, 1.41, .82, 1.41) 0.2s;
     transform: scale(1.02);
+    transition: ease-in 0.3s;
 }
 
 .title-share-button {
@@ -119,4 +122,52 @@ footer {
     80% {
         text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
     }
+}
+
+.spotify-container {
+    width: 60%;
+    background-color: rgb(37, 37, 37);
+    margin: 7px;
+    border-radius: 17px;
+    display: flex;
+    flex-direction: column;
+    transition: ease-in 0.2s;
+}
+
+.spotify-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+    color: rgb(240, 240, 240);
+    cursor: pointer;
+    font-size: 18px;
+    text-decoration: none;
+    border-radius: 17px;
+    transition: background-color 0.3s ease;
+}
+
+.spotify-link:hover {
+    background-color: #1aa34a;
+    transition: background-color 0.3s ease;
+}
+
+.spotify-embed {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.5s ease, opacity 0.5s ease;
+    opacity: 0;
+    border-radius: 12px;
+}
+
+.spotify-embed iframe {
+    border: none;
+    border-radius: 12px;
+    width: 100%;
+    height: 152px;
+}
+
+.spotify-embed.active {
+    max-height: 200px;
+    opacity: 1;
 }
